css/contact_media.css
@media (max-width: 1260px) {
    .headline {
        flex-direction: column;
        align-items: start;
        margin-bottom: 50px;
    }

    .headline hr {
        display: none;
    }

    .headline h2 {
        font-size: 56px;
        margin-bottom: 4px;
    }

    .headline p {
        margin-top: 4px;
        font-size: 24px;
    }

    .headline p::after {
        content: "";
        display: block;
        height: 3px;
        width: 90px;
        background-color: #29ABE2;
        margin-top: 3px;
    }

    .info-initial {
        width: 80px;
        height: 80px;
        font-size: 35px;
    }

    .info-name h4 {
        font-size: 36px;
    }
}


@media (max-width: 1200px) {
    .content-contact {
        padding-left: 25px;
    }

    .user-info-header {
        gap: 36px;
    }
}


@media (max-width: 1120px) {
    .user-container {
        width: 428px;
    }

    .list-header {
        width: 428px;
    }

    .contact {
        padding: 15px 12px;
    }

    .user-list {
        padding: 32px 12px;
    }

    .user-info-header {
        flex-direction: column;
        align-items: start;
    }

    .info-initial {
        align-self: flex-start;
    }

    .overlay-main-container {
        padding: 45px 24px;
        gap: 20px;
    }

    .overlay-cover {
        padding: 45px 24px;
    }

    .input-container {
        width: 350px;
    }

    .info-initial-overlay {
        align-self: center;
    }

    .submit-container {
        gap: 15px;
    }
}


@media (max-width: 1000px) {
    .user-container {
        width: 320px;
    }

    .list-header {
        width: 320px;
    }

    .tab {
        width: 260px;
    }

    .add-contact-container {
        width: 280px;
    }

    .contact {
        flex-direction: column;
        align-items: flex-start;
    }

    .overlay-main-container {
        padding: 45px 16px;
        gap: 10px;
    }

    .overlay-cover {
        padding: 45px 16px;
    }
}


.add-btn-resp {
    position: fixed;
    bottom: 150px;
    right: 45px;
    z-index: 50;
    display: none;
    justify-content: center;
    align-items: center;
    background-color: #2A3647;
    padding: 12px;
    border-radius: 50%;
    box-shadow: 0px 4px 4px 0px #00000040;
}


.contact-img {
    width: 32px;
    height: 32px;
}


.back-btn-resp {
    position: absolute;
    top: 150px;
    right: 45px;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 4px;
    opacity: 0;
}


.add-btn-resp:hover {
    background-color: #29ABE2;
    cursor: pointer;
}


.back-btn-resp:hover {
    border-radius: 50%;
    background-color: #D1D1D1;
    cursor: pointer;
}


.tools-overlay-Container {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 50;
    height: 100vh;
    width: 100%;
}


.editing-tools-resp {
    position: fixed;
    bottom: 120px;
    right: 5px;
    z-index: 60;
    display: flex;
    flex-direction: column;
    background-color: white;
    padding: 10px;
    border-radius: 20px 20px 0px 20px;
    box-shadow: 0px 4px 4px 0px #00000040;
    transform: translateX(100%);
    transition: transform 0.2s ease;
}


.tools-resp-active {
    transform: translate(0);
}


.editing-tools-resp div {
    padding: 8px;
    cursor: pointer;
}


.tools-resp:hover {
    background-color: #D1D1D1;
    border-radius: 10px;
}


@media (max-width: 900px) {
    .add-btn-resp {
        display: flex;
    }

    .user-info-header {
        flex-direction: row;
        align-items: center;
    }

    .list-header {
        display: none;
    }

    .user-list {
        height: calc(100vh - 101px);
        padding: 32px 24px 40px 24px;
    }

    .content-contact {
        display: none;
        height: calc(100vh - 176px);
    }

    .user-container {
        flex: 1;
    }

    .tab {
        width: 100%;
    }

    .contact {
        flex-direction: row;
        align-items: center;
    }

    .container-editing-tools {
        display: none;
    }

    /* overlay */

    .card-title h5 {
        font-size: 47px;
    }
    .card-title .motivation-text {
        font-size: 20px;
    }
    .submit-container {
        gap: 35px;
    }
}


@media (max-width: 450px) {
    .user-info-header {
        flex-direction: column;
        align-items: start;
        gap: 16px;
    }

    .user-contact-info {
        margin-block: 15px;
    }

    .headline {
        margin-bottom: 40px;
    }

    .headline h2 {
        margin-top: 10px;
        font-size: 48px;
    }

    .add-btn-resp {
        bottom: 110px;
        right: 25px;
    }

    .back-btn-resp {
        top: 130px;
        right: 25px;
    }

    .overlay-contact-resp {
        width: 100% !important;
    }

    .overlay-cover-resp {
        width: 100% !important;
    }

    .overlay-main-container-resp {
        width: 100% !important;
    }
}


@media (max-width: 400px) {
    .input-container-resp {
        width: 300px;
    }
    
    .contact-info {
        overflow: hidden;
    }

    .headline {
        margin-block: 15px 20px;
    }
}

@media (max-height: 670px) {
    .overlay-contact-resp {
        height: 665px;
    }
}

